--- a/Mappy/ExcellentMap/src/main/resources/map.html
+++ b/Mappy/ExcellentMap/src/main/resources/map.html
@@ -1,21 +1,20 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta http-equiv="content-type" content="text/html; charset=UTF8">
     <meta name="viewport" content="initial-scale=1.0, user-scalable=no"/>
     <meta charset="UTF8">
 
     <script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=true"></script>
 
-    <script type="text/javascript" charset="utf-8" src="${pageContext.request.contextPath}/resources/js/d3.js"></script>
-    <script type="text/javascript" charset="utf-8" src="${pageContext.request.contextPath}/resources/js/d3.slider.js"></script>
-    <script type="text/javascript" charset="utf-8" src="${pageContext.request.contextPath}/resources/js/jquery-2.1.1.js"></script>
-    <script type="text/javascript" charset="utf-8" src="${pageContext.request.contextPath}/resources/js/jquery.browser.js"></script>
-    <script type="text/javascript" charset="utf-8" src="${pageContext.request.contextPath}/resources/js/flexigrid.js"></script>
+    <script type="text/javascript" src="js/d3.js"></script>
+    <script type="text/javascript" src="js/d3.slider.js"></script>
+    <script type="text/javascript" src="js/jquery-2.1.1.js"></script>
+    <script type="text/javascript" src="js/jquery.browser.js"></script>
+    <script type="text/javascript" src="js/flexigrid.js"></script>
 
-    <link rel="stylesheet" href="${pageContext.request.contextPath}/resources/css/d3.slider.css" />
-    <link rel="stylesheet" href="${pageContext.request.contextPath}/resources/css/flexigrid.css" />
-    <link rel="stylesheet" href="${pageContext.request.contextPath}/resources/css/web.css" />
+    <link rel="stylesheet" href="css/d3.slider.css" />
+    <link rel="stylesheet" href="css/flexigrid.css" />
+    <link rel="stylesheet" href="css/web.css" />
   </head>
 
   <body>
@@ -27,12 +26,8 @@
 
     <div id="map"></div>
 
-
-
-
-
     <script type="text/javascript">
-    // Create the Google Map…
+    // Create the Google Mapâ€¦
     var map = new google.maps.Map(d3.select("#map").node(), {
       zoom: 8,
       center: new google.maps.LatLng(37.76487, -122.41948),
@@ -84,7 +79,7 @@
         };
       };
 
-      // Bind our overlay to the map…
+      // Bind our overlay to the mapâ€¦
       overlay.setMap(map);
     });
 
@@ -169,10 +164,6 @@
       height: 200
     });
     </script>
-
-
-
-
   </body>
 
 </html>
